[gd_scene load_steps=6 format=3 uid="uid://b6c0437xdr4dq"]

[ext_resource type="Texture2D" uid="uid://bjb30nw5r6mj" path="res://sprites/characters/character_shadow.png" id="1_808bg"]
[ext_resource type="Script" uid="uid://cqde2wtrj6y1a" path="res://scripts/characters/enemy.gd" id="1_d80uj"]
[ext_resource type="Texture2D" uid="uid://fu387cjw7ovo" path="res://sprites/characters/enemy.png" id="2_808bg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_d80uj"]
radius = 150.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d80uj"]
size = Vector2(16, 7)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_d80uj")
move_speed = 90.0
move_acceleration = 800.0
move_friction = 600.0

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.22745098)
z_index = -1
texture = ExtResource("1_808bg")
offset = Vector2(-7, -12)

[node name="Sprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_808bg")
offset = Vector2(0, -12)

[node name="PlayerDetectionZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionZone"]
shape = SubResource("CircleShape2D_d80uj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_d80uj")

[connection signal="body_entered" from="PlayerDetectionZone" to="." method="_on_player_detection_zone_body_entered"]
[connection signal="body_exited" from="PlayerDetectionZone" to="." method="_on_player_detection_zone_body_exited"]
